--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.20.0",
+    "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.0.12",
+    "dayjs": "^1.9.3",
+    "node-sass": "^4.14.1",
     "react": "^16.14.0",
+    "react-content-loader": "^5.1.3",
     "react-dom": "^16.14.0",
+    "react-hook-form": "^6.9.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "typescript": "~3.7.2"
   },
